# fh101rf

./: .gitignore  README.org  fh101rf.yaml  fh101rf_reg.md
c/: CMakeLists.txt  fh101rf.c  fh101rf.h  fh101rf_reg.h
example_project/c_test/: .clangd  .mxproject  CMakeLists.txt  STM32U545xx_FLASH.ld  STM32U545xx_RAM.ld  c_test.ioc  justfile
example_project/c_test/Core/Inc/: main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
example_project/c_test/Core/Src/: main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
example_project/c_test/Drivers/segger/: CMakeLists.txt
example_project/c_test/cmake/: gcc-arm-none-eabi.cmake
example_project/c_test/cmake/stm32cubemx/: CMakeLists.txt
example_project/rs_test/: Cargo.toml  memory.x  rust-toolchain.toml
example_project/rs_test/src/: main.rs
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: config.rs  device.rs  error.rs  lib.rs  registers.rs
