[package]
name = "fh101rf"
version = "1.0.2"
authors = ["Silvano Cortesi <silvano.cortesi@hotmail.com>, Jonah Imfeld"]
description = "Driver crate for the FH101RF Wake-Up Radio"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "no-std", "sensor", "radio"]
edition = "2021"
license = "LGPL-3.0"
repository = "https://github.com/trembel/fh101rf"
readme = "../README.org"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
maybe-async = "0.2.10"
defmt = { version = "0.3", optional = true }

[features]
default = ["async"]
async = []
defmt = ["dep:defmt"]
