[package]
name = "rs_test"
edition = "2021"
authors = ["Silvano Cortesi <silvano.cortesi@hotmail.com>"]

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.6.0", features = ["task-arena-size-16384", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.6.0" }
embassy-time-driver = { version = "0.1.0", features = ["tick-hz-32_768"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32u545re", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-futures = "0.1.1"
static_cell = "2.1.0"
fh101rf = { version = "1.0.2", features = ["async", "defmt"], path = "../../rust" }

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
